# RAG_threatIntel

./: .gitignore  README.md  audit.jsonl  digest.md  kev_data.json  kev_digest.md  pyproject.toml  requirements.txt  seen_urls.json  setup.py  unified_digest.md
corpus/: 2026-07-14-sharepoint-adfs-zero-days.txt  2026-07-14-sonicwall-sma1000-zero-days.txt  2026-07-15-microsoft-patch-tuesday-roundup.txt  2026-07-16-unrelated-noise-test.txt  2026-07-19-1m-emails-use-hidden-text-to-dupe-ai-security-filters.txt  2026-07-19-abbott-probes-two-cyber-incidents-amid-extortion-claims.txt  2026-07-19-acr-stealer-uses-clickfix-lures-to-steal-browser-tokens-and-microsoft-365-files.txt  2026-07-19-agentic-ai-taming-the-unpredictable.txt  2026-07-19-armenia-detains-russian-tourist-on-u-s-warrant-for-revil-hacker-lawyers-say-wron.txt  2026-07-19-e-u-orders-google-to-open-android-mic-camera-and-screen-to-rival-ai-assistants.txt  2026-07-19-ernst-young-discloses-data-breach-after-support-system-hack.txt  2026-07-19-fake-coding-tests-deliver-ottercookie-aligned-malware-hidden-in-svg-flag-images.txt  2026-07-19-forgotten-bootloaders-expose-secure-boot-blind-spot.txt  2026-07-19-gold-eagle-clearinghouse-targets-security-gap-but-how-is-unclear.txt  2026-07-19-goldeneyedog-subgroup-linked-to-digicert-breach-and-code-signing-certificate-the.txt  2026-07-19-google-bets-agentic-defense-strategy-can-outpace-attackers.txt  2026-07-19-guten-tag-bonjour-hola-to-our-european-cyber-defenders.txt  2026-07-19-hollowbyte-ddos-flaw-bloats-openssl-server-memory-with-11-byte-payload.txt  (+79 more)
tests/: test_audit.py  (+13 more)
(+32 files in other folders)
