[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "threat-digest"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers==3.3.1",
    "faiss-cpu==1.9.0",
    "numpy==1.26.4",
]

[tool.setuptools.packages.find]
where = ["src"]
